--- a/package.json
+++ b/package.json
@@ -1,40 +1,26 @@
 {
   "name": "bless-anyone",
   "version": "1.0.0",
-  "description": "A Telegram bot for sending and receiving SOL tips on Solana testnet",
-  "main": "bot.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node bot.js",
-    "dev": "nodemon bot.js",
-    "postinstall": "npm install"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Abhyudday/Bless-Anyone.git"
   },
-  "keywords": [
-    "telegram",
-    "bot",
-    "solana",
-    "crypto",
-    "tips"
-  ],
-  "author": "Abhyuday",
-  "license": "MIT",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/Abhyudday/Bless-Anyone/issues"
   },
   "homepage": "https://github.com/Abhyudday/Bless-Anyone#readme",
+  "description": "",
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "mongoose": "^7.5.0",
-    "node-telegram-bot-api": "^0.61.0",
-    "@solana/web3.js": "^1.78.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "engines": {
-    "node": ">=14.0.0"
+    "@solana/web3.js": "^1.98.2",
+    "dotenv": "^16.5.0",
+    "mongoose": "^8.14.2",
+    "node-telegram-bot-api": "^0.66.0"
   }
 }
