--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ package-lock.json
 # Environment variables
 .env
 
+# Wallet data
+wallets.json
+claim_wallets.json
+user_wallets.json
+
 # Logs
 *.log
 
