--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "solana-tip-bot",
+  "name": "bless-anyone",
   "version": "1.0.0",
-  "description": "A Telegram bot for sending and receiving SOL tips",
-  "main": "bot.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node bot.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -17,11 +16,13 @@
     "url": "https://github.com/Abhyudday/Bless-Anyone/issues"
   },
   "homepage": "https://github.com/Abhyudday/Bless-Anyone#readme",
+  "description": "",
   "dependencies": {
-    "@solana/web3.js": "^1.87.6",
+    "@solana/web3.js": "^1.98.2",
     "dotenv": "^16.5.0",
-    "mongodb": "^6.3.0",
+    "mongodb": "^6.16.0",
     "mongoose": "^8.14.2",
-    "node-telegram-bot-api": "^0.64.0"
+    "node-telegram-bot-api": "^0.66.0",
+    "pg": "^8.15.6"
   }
 }
