--- a/package.json
+++ b/package.json
@@ -1,29 +1,24 @@
 {
-  "name": "bless-anyone",
+  "name": "solana-tip-bot",
   "version": "1.0.0",
+  "description": "A Telegram bot for sending and receiving SOL tips on Solana testnet",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Abhyudday/Bless-Anyone.git"
-  },
-  "keywords": [],
+  "keywords": [
+    "solana",
+    "telegram",
+    "bot",
+    "crypto",
+    "tips"
+  ],
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Abhyudday/Bless-Anyone/issues"
-  },
-  "homepage": "https://github.com/Abhyudday/Bless-Anyone#readme",
-  "description": "",
+  "license": "MIT",
   "dependencies": {
-    "@solana/web3.js": "^1.98.2",
-    "dotenv": "^16.5.0",
-    "mongodb": "^6.16.0",
-    "mongoose": "^8.14.2",
-    "node-telegram-bot-api": "^0.66.0",
-    "pg": "^8.15.6"
+    "@solana/web3.js": "^1.87.6",
+    "node-telegram-bot-api": "^0.64.0",
+    "pg": "^8.11.3"
   }
 }
